--- a/src/app/admin/form-category/category-form.component.html
+++ b/src/app/admin/form-category/category-form.component.html
@@ -2,7 +2,7 @@
     <div>
         <mat-form-field appearance="outline">
             <mat-label>Category Name</mat-label>
-            <input [(ngModel)]="categoryName" matInput placeholder="Placeholder">
+            <input [(ngModel)]="categoryName" matInput>
         </mat-form-field>
     </div>
     <div>
