--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,20 +1,20 @@
-<div *ngIf="authService.auth.user | async as user; else showLogin">
-    <h1>Hello {{ user.email }}!</h1>
-    <button mat-raised-button routerLink="/admin">Admin</button>
-    <button mat-raised-button routerLink="/manage">Manage</button>
-    <button mat-raised-button (click)="authService.logout()">Logout</button>
+<div *ngIf="userData; else showLogin" class="profile">
+    <h1>Hello, {{ userData.name }}.</h1>
+    <button *ngIf="userData.role == 'admin'" mat-raised-button color="primary" routerLink="/admin">Admin</button>
+    <button mat-raised-button color="primary" routerLink="/staff">Staff</button>
+    <button mat-raised-button color="warn" (click)="logout()">Logout</button>
 </div>
 <ng-template #showLogin>
-    <mat-form-field appearance="outline">
-        <mat-label>Username</mat-label>
-        <input [(ngModel)]="username" type="email" matInput>
-    </mat-form-field>
-    <mat-form-field appearance="outline">
-        <mat-label>Password</mat-label>
-        <input [(ngModel)]="password" type="password" matInput>
-    </mat-form-field>
-    <div>
-        <button mat-raised-button type="submit" (click)="login()">
+    <div class="login">
+        <mat-form-field appearance="outline">
+            <mat-label>E-mail</mat-label>
+            <input [(ngModel)]="username" type="email" matInput>
+        </mat-form-field>
+        <mat-form-field appearance="outline">
+            <mat-label>Password</mat-label>
+            <input [(ngModel)]="password" type="password" matInput>
+        </mat-form-field>
+        <button style="display: flex;" mat-raised-button type="submit" (click)="login()">
             Login
         </button>
     </div>
