--- a/src/app/admin/edit-table/edit-table.component.html
+++ b/src/app/admin/edit-table/edit-table.component.html
@@ -1,8 +1,8 @@
 <button class="add-button" mat-raised-button color="accent" (click)="addTable()">
-    Add table
+    Add Table
 </button>
 <button mat-raised-button color="warn" (click)="deleteTable()">
-    Delete a table
+    Delete Table
 </button>
 
 <div *ngFor="let table of tableList">
