--- a/src/app/cus/cus-nav/cus-nav.component.html
+++ b/src/app/cus/cus-nav/cus-nav.component.html
@@ -18,7 +18,7 @@
         (click)="drawer.toggle()">
         <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
       </button>
-      <span>Restaurant</span>
+      <span>Table {{tableId}}</span>
     </mat-toolbar>
 
     <router-outlet></router-outlet>
