--- a/src/app/cus/order/order.component.css
+++ b/src/app/cus/order/order.component.css
@@ -1,7 +1,8 @@
 .mat-card {
-    padding: 8px 8px 8px 8px;
+    padding: 8px 8px 8px 16px;
+    margin-bottom: 1px;
 }
 
-.mat-raised-button {
-    margin: 8px 8px;
+.bill-button {
+    margin: 8px 16px;
 }
