--- a/src/app/res/menu-list/menu-list.component.html
+++ b/src/app/res/menu-list/menu-list.component.html
@@ -1,15 +1,22 @@
-<div *ngFor="let dish of menu">
-    <mat-card>
-        <span class="dish-name">
-            {{dish.payload.val().name}}
-        </span>
-        <div>
-            <button mat-raised-button *ngIf="dish.payload.val().status == 0" color="primary" (click)="enableDish(dish)">
-                Enable
-            </button>
-            <button mat-raised-button *ngIf="dish.payload.val().status == 1" color="warn" (click)="disableDish(dish)">
-                Disable
-            </button>
-        </div>
-    </mat-card>
+<div *ngFor="let category of categories">
+    <h2>{{category.name}}</h2>
+    <div *ngFor="let dish of menu">
+        <mat-card *ngIf="dish.payload.val().category == category.id">
+            <div style="display: table;">
+                <div class="name">{{dish.payload.val().name}}</div>
+                <div class="button-row">
+                    <div class="flex-container">
+                        <button mat-raised-button *ngIf="dish.payload.val().status == 0" color="primary"
+                            (click)="enableDish(dish)">
+                            Enable
+                        </button>
+                        <button mat-raised-button *ngIf="dish.payload.val().status == 1" color="warn"
+                            (click)="disableDish(dish)">
+                            Disable
+                        </button>
+                    </div>
+                </div>
+            </div>
+        </mat-card>
+    </div>
 </div>
