--- a/src/app/res/order-list/order-list.component.css
+++ b/src/app/res/order-list/order-list.component.css
@@ -1,7 +1,24 @@
-.mat-card {
-    padding: 8px 8px 8px 16px;
+.head {
+    display: flex;
+    font-size: 20px;
+    margin-bottom: 4px;
 }
 
-.mat-raised-button {
-    margin-right: 8px;
+.detail {
+    display: flex;
+    font-size: 14px;
+    margin-bottom: 4px;
+    word-break: break-all;
+}
+
+.button-row {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap;
+}
+
+.mat-card {
+    padding: 8px 8px 8px 16px;
+    margin-bottom: 1px;
 }
