--- a/src/app/res/table-list/table-list.component.html
+++ b/src/app/res/table-list/table-list.component.html
@@ -20,7 +20,7 @@
                 Disable
             </button>
             <button mat-raised-button *ngIf="table.payload.val().status == 3" color="accent" (click)="billTable(table)"
-                routerLink="/manage/billing">
+                routerLink="/staff/billing">
                 Bill
             </button>
         </div>
